fix story link on site

--- a/views/index.html
+++ b/views/index.html
@@ -74,7 +74,7 @@
 
 
         .navbar-brand {
-            background: url(site-logo.png) center / contain no-repeat;
+            background: url(../site-logo.png) center / contain no-repeat;
             width: 200px;
             transform: translateX(-50%);
             left: 50%;
@@ -170,7 +170,7 @@
 <!-- The  Main image -->
 <div class="carousel-inner">
     <div class="item active">
-        <img src="site-cover.jpg" alt="ירושלים">
+        <img src="../site-cover.jpg" alt="ירושלים">
         <div class="carousel-caption">
             <h3>ירושלים</h3>
         </div>
@@ -209,19 +209,19 @@
     <div class="row text-center">
         <div class="col-sm-4">
             <div class="thumbnail">
-                <img src="demo1.jpg" alt="בלה" width="400" height="300">
+                <img src="../demo1.jpg" alt="תמונה" width="400" height="300">
                 <p>טכנולוגיה בשירות האמנות</p>
             </div>
         </div>
         <div class="col-sm-4">
             <div class="thumbnail">
-                <img src="demo2.jpg" alt="בלה" width="400" height="300">
+                <img src="../demo2.jpg" alt="תמונה" width="400" height="300">
                 <p>חוויה יוצאת דופן</p>
             </div>
         </div>
         <div class="col-sm-4">
             <div class="thumbnail">
-                <img src="demo3.jpg" alt=בלה" width="400" height="300">
+                <img src="../demo3.jpg" alt=תמונה" width="400" height="300">
                 <p>יצירה משותפת</p>
             </div>
         </div>
@@ -254,20 +254,20 @@
 
         <div class="col-xs-4 col-ms-4">
             <a href="https://github.com/eviabs/Stories-Client">
-                <img src="git.png" alt="גיטהאב" width="45">
+                <img src="../git.png" alt="גיטהאב" width="45">
             </a>
         </div>
 
         <div class="col-xs-4 col-ms-4">
-            <a href="stories.apk">
-                <img src="download.png" alt="הורדה ישירה" width="50">
+            <a href="../stories.apk">
+                <img src="../download.png" alt="הורדה ישירה" width="50">
             </a>
         </div>
 
 
         <div class="col-xs-4 col-ms-4">
-            <a href="stories.apk">
-                <img src="play-store.png" alt="גוגל פליי" width="45">
+            <a href="../stories.apk">
+                <img src="../play-store.png" alt="גוגל פליי" width="45">
             </a>
         </div>
 
