--- a/views/index.ejs
+++ b/views/index.ejs
@@ -319,7 +319,7 @@
 
 
         <div class="col-xs-4 col-ms-4">
-            <a href="../stories.apk">
+            <a href="https://play.google.com/store/apps/details?id=stories.spectrum.huji.ac.il.stories">
                 <img src="../play-store.png" alt="גוגל פליי" width="45">
             </a>
         </div>
